logs/Write_data_to_postgres_then_to_elasticsearch/Create_table_in_postgres/2020-11-27T23:37:13.660438+00:00/1.log
[2020-11-28 05:07:16,639] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-27T23:37:13.660438+00:00 [queued]>
[2020-11-28 05:07:16,659] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-27T23:37:13.660438+00:00 [queued]>
[2020-11-28 05:07:16,659] {taskinstance.py:880} INFO - 
--------------------------------------------------------------------------------
[2020-11-28 05:07:16,659] {taskinstance.py:881} INFO - Starting attempt 1 of 1
[2020-11-28 05:07:16,659] {taskinstance.py:882} INFO - 
--------------------------------------------------------------------------------
[2020-11-28 05:07:16,673] {taskinstance.py:901} INFO - Executing <Task(PostgresOperator): Create_table_in_postgres> on 2020-11-27T23:37:13.660438+00:00
[2020-11-28 05:07:16,676] {standard_task_runner.py:54} INFO - Started process 62755 to run task
[2020-11-28 05:07:16,704] {standard_task_runner.py:77} INFO - Running: ['airflow', 'run', 'Write_data_to_postgres_then_to_elasticsearch', 'Create_table_in_postgres', '2020-11-27T23:37:13.660438+00:00', '--job_id', '360', '--pool', 'default_pool', '--raw', '-sd', 'DAGS_FOLDER/dag.py', '--cfg_path', '/var/folders/ff/pqhf5klx0msdsn3m1cnq4cxr0000gn/T/tmpo_zb2__y']
[2020-11-28 05:07:16,706] {standard_task_runner.py:78} INFO - Job 360: Subtask Create_table_in_postgres
[2020-11-28 05:07:16,755] {logging_mixin.py:112} INFO - Running %s on host %s <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-27T23:37:13.660438+00:00 [running]> 47.43.168.192.in-addr.arpa
[2020-11-28 05:07:16,782] {postgres_operator.py:62} INFO - Executing: CREATE TABLE sampletable(
            id integer PRIMARY KEY,
            description text,
            name text,
            id1 text,
            id2 text,
            department text,
        )
        
[2020-11-28 05:07:16,790] {base_hook.py:89} INFO - Using connection to: id: postgres_default. Host: localhost, Port: None, Schema: testdb, Login: testuser, Password: XXXXXXXX, extra: None
[2020-11-28 05:07:16,798] {dbapi_hook.py:174} INFO - CREATE TABLE sampletable(
            id integer PRIMARY KEY,
            description text,
            name text,
            id1 text,
            id2 text,
            department text,
        )
        
[2020-11-28 05:07:16,799] {taskinstance.py:1150} ERROR - syntax error at or near ")"
LINE 8:         )
                ^
Traceback (most recent call last):
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 984, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/operators/postgres_operator.py", line 65, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/hooks/dbapi_hook.py", line 175, in run
    cur.execute(s)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:         )
                ^

[2020-11-28 05:07:16,802] {taskinstance.py:1194} INFO - Marking task as FAILED. dag_id=Write_data_to_postgres_then_to_elasticsearch, task_id=Create_table_in_postgres, execution_date=20201127T233713, start_date=20201127T233716, end_date=20201127T233716
[2020-11-28 05:07:21,636] {local_task_job.py:102} INFO - Task exited with return code 1
